src/snapshots/common_mark_language_server__lsp__tests__completion-2.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::Completion>(CompletionParams {\n        text_document_position: TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n            Position::new(2, 2)),\n        context: None,\n        work_done_progress_params: WorkDoneProgressParams::default(),\n        partial_result_params: PartialResultParams::default(),\n    })"
---
Ok(
    Some(
        Array(
            [],
        ),
    ),
)
