src/snapshots/common_mark_language_server__lsp__tests__gotodefinition-3.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::GotoDefinition>(GotoDefinitionParams {\n        text_document_position_params: TextDocumentPositionParams::new(TextDocumentIdentifier::new(file2),\n            Position::new(4, 0)),\n        work_done_progress_params: WorkDoneProgressParams::default(),\n        partial_result_params: PartialResultParams::default(),\n    })"
---
Ok(
    Some(
        Scalar(
            Location {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/file1.md",
                    query: None,
                    fragment: None,
                },
                range: Range {
                    start: Position {
                        line: 0,
                        character: 0,
                    },
                    end: Position {
                        line: 0,
                        character: 5,
                    },
                },
            },
        ),
    ),
)
